2008-03-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/itfile_test.cpp, tests/itfile_test_data.it: Improve
	itfile_test by using a non-continuous reference data file

	Such a data file is prepared by first saving a longer data structure
	(ivec in this case), then deleting it and finally saving a shorter
	data structure in the same place.

	* itpp/base/itfile.cpp: Do not duplicate seek operation after
	reading data_header fields

	When reading each field of a data_header structure of an IT++
	file, the reading position is automatically incremented. So, the
	additional seekg() operation afterwards is redundant. This small
	modification fixes a problem with endless loop while reading an
	itfile in programs compiled with MSVC++ 2008. Previous MSVC++
	version (2005) does not show this strange behaviour.

	* tests/Makefile.am, tests/converters_test.cpp,
	tests/converters_test.ref,
	win32/itpp_acml_tests/converters_test.vcproj,
	win32/itpp_acml_tests/itpp_acml_tests.sln,
	win32/itpp_mkl_tests/converters_test.vcproj,
	win32/itpp_mkl_tests/itpp_mkl_tests.sln: Create a simple test
	program of various conversion functions

	This test should catch possible incompatible implementation of the
	rint() function, which is not available under MSVC++ compiler.

	* itpp/base/converters.cpp, itpp/base/converters.h: Fix incorrect
	implementation of rint() function used under MSVC++

	The rint() function is not available under MSVC++ compiler. Thus,
	the local implementation has to be conditionally enabled for this
	compiler. This patch fixes the incorrect implementation of rint()
	function, which behaved like a similar round() function. It also
	moves the "double rint(double)" definition out of the itpp
	namespace.

2008-03-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj: Do not treat
	warnings as errors in MSVC++ projects

	This is a workaround for MS Visual C++ Express 2008 problem in